2001-12-20  Miguel de Icaza  <miguel@ximian.com>

	* const.cs: Use the underlying type for enumerations

	* delegate.cs: Compute the basename for the delegate creation,
	that should fix the delegate test case, and restore the correct
	Type Lookup semantics in rootcontext

	* rootcontext.cs: Revert Ravi's last patch.  The correct way of
	referencing a nested type with the Reflection API is using the "+"
	sign. 

	* cs-parser.jay: Do not require EOF token at the end.

2001-12-20  Ravi Pratap  <ravi@ximian.com>

	* rootcontext.cs (LookupType): Concatenate type names with
	a '.' instead of a '+' The test suite passes again.

	* enum.cs (Enum.DefineEnum): Set RTSpecialName on the 'value__'
	field of the enumeration.

	* expression.cs (MemberAccess.ResolveMemberAccess): Add support for
	the case when the member is an EventExpr.

	* ecore.cs (EventExpr.InstanceExpression): Every event which is not
	static has an associated instance expression.

	* typemanager.cs (RegisterEvent): The usual workaround, now for events.

	(GetAddMethod, GetRemoveMethod): Workarounds, as usual.

	* class.cs (Event.Define): Register event and perform appropriate checks
	for error #111.

 	We define the Add and Remove methods even if the use provides none because
	in that case, we provide default implementations ourselves.

	Define a private field of the type of the event. This is done by the CSC compiler
	and we should be doing it too ;-)

	* typemanager.cs (delegate_combine_delegate_delegate, delegate_remove_delegate_delegate):
	More methods we use in code we generate.

	(multicast_delegate_type, delegate_type): Two separate types since the distinction
	is important.

	(InitCoreTypes): Update accordingly for the above.

	* class.cs (Event.Emit): Generate code for default accessors that we provide

	(EmitDefaultMethod): Do the job in the above.

	* delegate.cs (DefineDelegate): Use TypeManager.multicast_delegate_type in the 
	appropriate place.

2001-12-20  Miguel de Icaza  <miguel@ximian.com>
